@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-12T08:31:14Z",
-  "count_outdated" : 234,
-  "uniques_outdated" : 112,
-  "count" : 260,
-  "uniques" : 127,
+  "timestamp" : "2022-07-12T16:36:59Z",
+  "count_outdated" : 236,
+  "uniques_outdated" : 113,
+  "count" : 262,
+  "uniques" : 128,
   "clones" : [
-    {
-      "timestamp": "2022-06-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-29T00:00:00Z",
       "count": 2,
@@ -100,6 +93,13 @@
       "timestamp": "2022-07-11T00:00:00Z",
       "count": 4,
       "count_minmax": [ 1, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-12T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
