@@ -3,11 +3,6 @@
   "uniques": 2,
   "clones": [
     {
-      "timestamp": "2022-06-28T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-06-29T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -70,6 +65,11 @@
     {
       "timestamp": "2022-07-11T00:00:00Z",
       "count": 4,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-12T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
