@@ -1,3 +1,10 @@
+2022-07-12T16:36:59Z:
+* notice: last 14d: unq all: 2 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 112 234 / 127 260
+* notice: next accum: outdated-unq outdated-all / unq all: 113 236 / 128 262
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2022-06-28] / [2022-07-12]
+
 2022-07-12T08:31:14Z:
 * notice: last 14d: unq all: 2 26
 * notice: prev accum: outdated-unq outdated-all / unq all: 112 234 / 127 261
